KWR008 ThanhPV Update code SEVER ver22 screen B

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/008/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/008/b/index.xhtml
@@ -6,27 +6,32 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
     <ui:composition template="../../../../master/dialog.xhtml">
-        <ui:define name="htmlHead">
-            <script>
+		<ui:define name="htmlHead">
+			<com:scriptfile set="IGNITE" />
+			<script>
                 var dialogSize = {
                     width : 1200,
                     height : 680
                 };
             </script>
-            <com:ValidatorScript>
+			<com:ValidatorScript>
                 nts.uk.ctx.at.function.dom.annualworkschedule.primitivevalue.OutItemsWoScCode
                 nts.uk.ctx.at.function.dom.annualworkschedule.primitivevalue.OutItemsWoScName
                 nts.uk.ctx.at.function.dom.annualworkschedule.primitivevalue.ItemOutTblBookHeadingName
             </com:ValidatorScript>
-            <com:scriptfile set="IGNITE" />
-            <com:scriptfile path="../share/model.js" />
-            <com:stylefile path="kwr008.b.style.css" />
-            <com:scriptfile path="kwr008.b.start.js" />
-            <com:scriptfile path="kwr008.b.vm.js" />
-            <com:scriptfile path="kwr008.b.service.js" />
-        </ui:define>
+            <com:EnumScript>
+				nts.uk.ctx.at.function.dom.annualworkschedule.enums.TotalAverageDisplay
+				nts.uk.ctx.at.function.dom.annualworkschedule.enums.MonthsInTotalDisplay
+			</com:EnumScript>
+			
+			<com:scriptfile path="../share/model.js" />
+			<com:stylefile path="kwr008.b.style.css" />
+			<com:scriptfile path="kwr008.b.start.js" />
+			<com:scriptfile path="kwr008.b.vm.js" />
+			<com:scriptfile path="kwr008.b.service.js" />
+		</ui:define>
 
-        <ui:define name="content">
+		<ui:define name="content">
             <div id="functions-area">
                 <button tabindex="1" data-bind="click: registerMode, enable: !isNewMode()">#{i18n.getText('KWR008_18')}</button>
                 <button tabindex="2" data-bind="click: doRegister, enable: $root.errors.isEmpty" class="proceed">#{i18n.getText('KWR008_19')}</button>
@@ -150,24 +155,24 @@
 	                        <!-- B5_2 -->
 	                        <span class="label check_box_block">#{i18n.getText('KWR008_64')}</span>
 	                        <!-- B5_3 -->
-	                        <div id="combo-box_1" data-bind="ntsComboBox: {
+	                        <div id="combo-box_1" tabindex="12"  data-bind="ntsComboBox: {
 	                        	width: '100px',
 								name: '#[#KWR008_64]',
-								options: contentSelectionOutput,
+								options: $parent.contentSelectionOutput,
 								optionsValue: 'value',
-								visibleItemsCount: 3,
+								visibleItemsCount: 2,
 								value: selectedValue,
 								optionsText: 'name',
 								columns: [
 									{ prop: 'name', length: 8 },
 								]}"></div>
-	                        <div id="B5_3" tabindex="11"  data-bind="visible: selectedValue() == 0, ntsRadioBoxGroup: {
+	                        <div id="B5_3" tabindex="13"  data-bind="visible: selectedValue() == 1, ntsRadioBoxGroup: {
 	                            options: $parent.itemRadio,
 	                            optionsValue: 'code',
 	                            optionsText: 'name',
 	                            value: displayFormat}">
 	                        </div>
-	                        <span class="label label36" data-bind="visible: selectedValue() == 1">#{i18n.getText('KWR008_65')}</span>
+	                        <span class="label label36" data-bind="visible: selectedValue() == 2">#{i18n.getText('KWR008_65')}</span>
 	                    </div>
 					</div>
                 </div>
