--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
@@ -40,10 +40,10 @@
             </div>
         </div>
         <div class="fixed-flex-layout-right">
-            <div class="control-group" style="border-bottom: #CCCCCC 1px solid;">
+            <div class="control-group" style="">
                 <div style="margin-bottom: 10px;" id="C2_1" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_24')}</div>
             </div>
-
+            <div style="border-bottom: #CCCCCC 1px solid; width: 840px; margin-top:-10px; margin-bottom: 10px"></div>
             <div>
                 <div id="C2_3" style="width: 300px" data-bind="ntsSearchBox: { targetKey: 'id', mode: 'igGrid', comId: 'grid2', items: items, selectedKey: 'id', fields: ['employeeCode','employeeName']}"></div>
                 <table id="grid2"></table>
