--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
@@ -38,10 +38,10 @@
             </div>
         </div>
         <div class="fixed-flex-layout-right">
-            <div class="control-group" style="border-bottom: #CCCCCC 1px solid;">
+            <div class="control-group" >
                 <div id="D2_1" style="margin-bottom: 5px;" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_29')}</div>
             </div>
-
+            <div style="border-bottom: #CCCCCC 1px solid; width: 800px; margin-top:-10px; margin-bottom: 10px"></div>
             <div>
                 <span id="D2_3" class="label with-image" style="margin-bottom: 10px; min-width: 180px">
                     <i class="image image-calendar"/>
