--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -40,10 +40,10 @@
             </div>
         </div>
         <div class="fixed-flex-layout-right">
-            <div class="control-group" style="border-bottom: #CCCCCC 1px solid;">
+            <div class="control-group" >
                 <div id="F2_1" style="margin-bottom: 5px;" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_38')}</div>
             </div>
-
+            <div style="border-bottom: #CCCCCC 1px solid; width: 840px; margin-top:-10px; margin-bottom: 10px"></div>
             <div style="margin-bottom: 10px">
                 <span  id="F2_3" class="label with-image" style=" width: 260px;">
                     <i class="image image-calendar"/>
