--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -40,10 +40,10 @@
             </div>
         </div>
         <div class="fixed-flex-layout-right">
-            <div class="control-group" style="border-bottom: #CCCCCC 1px solid;">
+            <div class="control-group" >
                 <div id="G2_1" style="margin-bottom: 10px;" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_42')}</div>
             </div>
-
+            <div style="border-bottom: #CCCCCC 1px solid; width: 840px; margin-top:-10px; margin-bottom: 10px"></div>
             <div>
                 <div id="G2_3" style="width: 260px" data-bind="
                         ntsSearchBox: {
