fix tabpanel-sample page

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/tabpanel/tabpanel.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/tabpanel/tabpanel.xhtml
@@ -71,7 +71,8 @@
 												options: items,
 												optionsValue: 'code',
 												value: currentCode,
-												editable: false
+												editable: false,
+												optionsText: 'code'
 										}"></div>
 									</div>
 									<div class="tab-content-4">
