--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/qmm020.i.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/qmm020.i.style.css
@@ -23,3 +23,8 @@
 .table .cell:nth-child(5) {
     width: 50px;
 }
+.no_regis {
+    width: 100%;
+    height: 100%;
+    background-color:  #FEC6C6;
+}
