KAF022: fixbug #99131 ver4 (+validate)

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -467,7 +467,7 @@
 												<span class="label" style = "margin-left: 5px;">#{i18n.getText('KAF022_374')}</span>
 												<span> <input id="a7_23"
 															data-bind="ntsTimeEditor: {
-														name:'#{i18n.getText('KAF022_67')}',
+														name:'#[KAF022_654]',
 														value: preOtTime,
 														constraint: 'AttendanceClock',
 									                    inputFormat: 'time',
@@ -486,7 +486,7 @@
 										<div class="flex valign-center" style = "margin-top: 5px;">
 											<span class="label" id="a7_22_2" style = "margin-left: 90px;">#{i18n.getText('KAF022_375')}</span>
 											<span> <input id="a7_23_2" style = "width: 42px; margin-left: 40px" data-bind="ntsTimeEditor: {
-														name:'#{i18n.getText('KAF022_67')}',
+														name:'#[KAF022_655]',
 														value: normalOtTime,
 														constraint: 'AttendanceClock',
 									                    inputFormat: 'time',
@@ -502,7 +502,7 @@
 										<div class="flex valign-center" style = "margin-top: 5px;">
 											<span class="label" id="a7_22_3" style = "margin-left: 90px;">#{i18n.getText('KAF022_376')}</span>
 											<span> <input id="a7_23_3" style = "width: 42px; margin-left: 5px; margin-bottom: 5px;" data-bind="ntsTimeEditor: {
-														name:'#{i18n.getText('KAF022_67')}',
+														name:'#[KAF022_656]',
 														value: retrictPreTimeDay,
 														constraint: 'AttendanceClock',
 									                    inputFormat: 'time',
