kdm002: update timer

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdm/002/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdm/002/b/index.xhtml
@@ -47,7 +47,7 @@
 								</td>
 								<td width='300px'>
 									<!-- B2-6 -->
-									<label style="padding-left:  10px;" data-bind="text : timeOver()"></label>
+									<span style="padding-left:  10px;" id="timeOver"></span>
 								</td>
 							</tr>
 							<tr >
