--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -93,7 +93,7 @@
                         <div class="cell valign-center">
                             <com:ko-if bind="$vm.screenControl().visibleD2_3()">
                                 <!--D2_3-->
-                                <div class="label limited-label" data-bind="text: shortName"/>
+                                <div class="label" data-bind="text: shortName"/>
                             </com:ko-if>
                         </div>
                     </div>
@@ -419,7 +419,7 @@
                                         </th>
                                         <td>
                                             <!--D11_16-->
-                                            <div class="label limited-label" data-bind="text: $vm.dataScreen().shortName"/>
+                                            <div class="label" data-bind="text: $vm.dataScreen().shortName"/>
                                         </td>
                                     </tr>
                                     <tr>
