--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/g/index.xhtml
@@ -89,7 +89,7 @@
                         <div class="cell valign-center">
                             <com:ko-if bind="screenControl().visibleG2_2()">
                                 <!--G2_3-->
-                                <div class="label limited-label" data-bind="text: dataScreen().shortName"/>
+                                <div class="label" data-bind="text: dataScreen().shortName"/>
                             </com:ko-if>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                                         </th>
                                         <td>
                                             <!--G4_6-->
-                                            <div class="label limited-label" data-bind="text: dataScreen().shortName"/>
+                                            <div class="label" data-bind="text: dataScreen().shortName"/>
                                         </td>
                                     </tr>
                                     <tr>
