QMM019P: revert anh fix error

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/p/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/p/index.xhtml
@@ -51,7 +51,7 @@
                         optionsValue: 'statementCode',
                         columns: [
                             {headerText: '', key: 'statementCode', hidden: true},
-                            {headerText: '#{i18n.getText('QMM019_21')}', key: 'dispname', width: 200, formatter: _.escape}
+                            {headerText: '#{i18n.getText('QMM019_21')}', key: 'statementName', width: 200, formatter: _.escape}
                         ],
                         multiple: true,
                         value: statementLayoutsSelected
