--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
@@ -462,7 +462,7 @@
 												optionsValue: 'id',
 												optionsText: 'name',
 												value: selectedRetrieval,
-												enable: retrievalMethodEnable }"></div>
+												enable: selectedSearchMethod() == 1 }"></div>
 									</td>
 								</tr>
 							</table>
