--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
@@ -22,7 +22,7 @@
 
                 </div>
                 <div style="border-bottom: #CCCCCC 1px solid; width: 1050px; margin-top:5px; margin-bottom: 10px"></div>
-                <table id="I2_1" tabindex="2" />
+                <table id="I2_1"/>
             </div>
         </div>
 
